# intentional

./: .clabot  .gitignore  .pre-commit-config.yaml  .pre-commit-pylint.sh  .pre-commit-pytest.sh  404.html  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  gradio_tests.py  index.html  license-header.txt  mkdocs.yml  objects.inv  websocket_echo.py
.github/workflows/: docs.yml  pre-commit.yml  pypi-release.yml  release-core.yml  release-plugin.yml  release.yml  testpypi-release.yml  tests.yml
CONTRIBUTING/: index.html
docs/: cla.md  concepts.md  config-file.md  core-reference.md  home.md  installation.md  plugins.md  reference.md
docs/cla/: index.html
docs/concepts/: index.html
docs/config-file/: index.html
docs/core-reference/: index.html
docs/home/: index.html
docs/installation/: index.html
docs/plugins/: index.html
docs/reference/: index.html
examples/: cli_audio_realtime_api.yml  cli_pipecat.yml  cli_text_chat.yml  example_agent.yml  example_cli_audio_realtime_api.yml  example_cli_text_chat.yml  example_fastapi_realtime_api.yml  example_fastapi_text_chat.yml  example_gradio_realtime_api.yml  example_gradio_realtime_api.yml-  example_gradio_text_chat.yml  example_telegram_text_chat.yml  example_text_chat.yml  example_textualui_realtime_api.yml  example_textualui_text_chat.yml  fastapi_realtime_api.yml  fastapi_text_chat.yml  telegram_text_chat.yml  textualui_realtime_api.yml  textualui_text_chat.yml
intentional/: README.md  pyproject.toml
intentional-core/: README.md  pyproject.toml
intentional-core/src/intentional_core/: __about__.py  __init__.py  bot_interface.py  bot_structure.py  end_conversation.py  events.py  intent_routing.py  llm_client.py  model_client.py  stt.py  tools.py  tts.py  vad.py
intentional-core/src/intentional_core/bot_structures/: __init__.py  bot_structure.py  direct_to_llm.py  text_chat.py  websocket.py
intentional-core/src/intentional_core/utils/: importing.py  inheritance.py
intentional-core/tests/: config_file_test.py  intent_router_test.py  stages_test.py  tools_test.py
intentional-core/tests/bot_structures_tests/: direct_to_llm_test.py
intentional/tests/: draw_test.py
plugin-template/intentional-{{ package_name }}/: README.md.jinja
plugins/: README.md
plugins/.template/: copier.yml
plugins/intentional-fastapi/: README.md  index.html
plugins/intentional-gradio/: .copier-answers.yml  README.md  pyproject.toml
plugins/intentional-gradio/docs/: reference.md
plugins/intentional-gradio/src/intentional_gradio/: __about__.py  __init__.py  bot_interface.py
plugins/intentional-local/: README.md  pyproject.toml
plugins/intentional-openai/: .copier-answers.yml  README.md  index.html  pyproject.toml
plugins/intentional-pipecat/: README.md  index.html  pyproject.toml
plugins/intentional-silero/: .copier-answers.yml  README.md  pyproject.toml
plugins/intentional-telegram/: README.md  index.html
plugins/intentional-terminal/: README.md  index.html  pyproject.toml
plugins/intentional-text-chat/: README.md  pyproject.toml
plugins/intentional-textual-ui/: README.md  index.html  pyproject.toml
plugins/intentional-transcribed-audio/: README.md  pyproject.toml
plugins/intentional-websocket/: README.md  pyproject.toml
search/: search_index.json
(+56 files in other folders)
