[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intentional-gradio"
dynamic = ["version"]
description = "Plugin to add a Gradio interface to interact with Intentional bots."
readme = "README.md"
requires-python = ">=3.8"
license = "AGPL-3.0-or-later"
license-files = { paths = ["LICENSE.txt"] }
keywords = []
authors = [
  { name = "ZanSara", email = "github@zansara.dev" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "intentional",
  "gradio",
]

[project.optional-dependencies]
test = [
  "intentional[test]"
]
lint = [
  "intentional[lint]"
]
dev = [
  "intentional[test,lint]"
]


[project.urls]
Documentation = "https://github.com/intentional-ai/intentional#readme"
Issues = "https://github.com/intentional-ai/intentional/issues"
Source = "https://github.com/intentional-ai/intentional"

[tool.hatch.version]
path = "src/intentional_gradio/__about__.py"

[tool.black]
line-length = 120
fast = true

[tool.pylint]
disable=[
  "fixme",
  "too-few-public-methods",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.main]
ignore = ["tests"]
